hphp/test/zend/bad/ext-spl/SplObjectStorage_var_dump.php
<?php
$o = new SplObjectStorage();

$o[new StdClass] = $o;

var_dump($o);